apë³수 조회, 단일조회, like, title 순 조í회, 코드 작성 완료